# py-flask-skeleton

./: .bumpversion.cfg  .env  README.md  pyproject.toml
py_flask_skeleton/: config.py  manage.py  run.py
py_flask_skeleton/server/: __init__.py
py_flask_skeleton/server/module/: controllers.py
tests/: test_py_flask_skeleton.py
