[tool.poetry]
name = "py-flask-skeleton"
version = "0.0.1"
description = "Skeleton project structure for Python Flask apps."
authors = ["Henry Marment <henrymarment@agmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.0"
gunicorn = "^19.9"
Flask-Cors = "^3.0"
Flask-SQLAlchemy = "^2.3"
flask-marshmallow = "^0.9.0"
marshmallow-sqlalchemy = "^0.15.0"
marshmallow = "^2.18"
psycopg2 = "^2.7"
Flask-Migrate = "^2.3"
flask-script = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
pycodestyle = "^2.5"
autoenv = "^1.0"
pytest-cov = "^2.6"
black = "^18.9b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
